# nutrition-planner

./: .gitignore  LICENSE  README.md  lookup.py  nutrition.py  nutrition_facts.py  pyproject.toml  requirements.txt  sample_response.json  streamlit_app.py
.github/workflows/: wf.yml
data/: apple_raw.csv  broccoli_raw.csv  chicken_raw_ground.csv  milk_low_fat_1.csv  oatmeal_no_added_fat_multigrain.csv  rice_raw_mediumgrain_brown.csv
test/: test_streamlit_app.py
