[tool.poetry]
name = "nutrition-planner"
version = "0.1.0"
description = "streamlit app for meal nutrition analysis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
ruff = "^0.0.280"
# mypy = "^1.4.1"
# wily = "^1.24.2"
# sphinx = "^7.1.1"
streamlit = "^1.25.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
httpx = "^0.24.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
