[tool.poetry]
name = "nutrition-planner"
version = "0.1.0"
description = "streamlit app for meal nutrition analysis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.46.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.3.0"
ruff = "^0.12.2"
pytest = "^8.4.1"
# pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
