[tool.poetry]
name = "nutrition-planner"
version = "0.1.0"
description = "streamlit app for meal nutrition analysis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
ruff = "^0.9.2"
pytest = "^8.3.4"
# pytest-cov = "^6.0.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
